# tap-xero

./: .gitignore  README.md  get_initial_xero_tokens.ipynb  properties.json  pyproject.toml  refresh_credentials.py  setup.cfg  setup.py
.circleci/: config.yml
dia_tap_xero/: __init__.py  client.py  context.py  credentials.py  streams.py  transform.py
dia_tap_xero/schemas/: allocations.json  bank_transactions.json  bank_transfers.json  credit_notes.json  invoices.json  items.json  line_items.json  manual_journals.json  nested_invoice.json  overpayments.json  payments.json  prepayments.json  purchase_orders.json  receipts.json  repeating_invoices.json  tax_rates.json
tap_xero/: __init__.py  credentials.py  http.py  streams.py
